# Flask-to-AWS-CodeDeploy

./: README.md  appspec.yml  log.txt  pyproject.toml  run.py
.github/workflows/: workflow.yml
scripts/: install_dependencies.sh  poetry_install  start_server  start_server.sh
tests/: test_index.py
