[tool.poetry]
name = "flask-to-aws-codedeploy"
version = "0.1.0"
description = ""
authors = ["whoamikyo <kyo@kyo.ninja>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.1.1"
requests = "^2.27.1"
Flask-Bootstrap = "^3.3.7"
supervisor = "^4.2.4"
pytest = "^7.1.1"
gunicorn = "^20.1.0"
appdirs = "^1.4.4"
visitor = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
